Change to MySQL. Add a constructor in UserRepository due to an error.

--- a/StudyShare.Application/StudyShare.Application.csproj
+++ b/StudyShare.Application/StudyShare.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StudyShare.Domain\StudyShare.Domain.csproj" />
+    <ProjectReference Include="..\StudyShare.Infrastructure\StudyShare.Infrastructure.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
