--- a/StudyShare.API/StudyShare.API.csproj
+++ b/StudyShare.API/StudyShare.API.csproj
@@ -12,13 +12,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\StudyShare.Application\StudyShare.Application.csproj" />
-    <ProjectReference Include="..\StudyShare.Infrastructure\StudyShare.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
