--- a/StudyShare.API/appsettings.json
+++ b/StudyShare.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3308;database=studysharedb;user=root;password=;"
+  }
 }
